dora x added. [skip CI]

--- a/Tools/dora-dora/package.json
+++ b/Tools/dora-dora/package.json
@@ -25,6 +25,7 @@
     "mac-scrollbar": "^0.10.6",
     "match-sorter": "^6.3.1",
     "monaco-editor": "^0.45.0",
+    "monaco-jsx-syntax-highlight": "^1.2.0",
     "postcss": "^8.4.4",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^7.3.0",
