--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Install deps
       run: |
         sudo apt-get update
-        sudo apt-get install -y libsdl2-dev libgl1-mesa-dev x11proto-core-dev libx11-dev
+        sudo apt-get install -y libsdl2-dev libgl1-mesa-dev libssl-dev x11proto-core-dev libx11-dev
     - name: Generate Lua bindings
       run: |
         sudo apt-get install lua5.1
